# paper-wars-client

./: .gitignore  Cargo.toml  README.md  build.rs  generate-schema
queries/: auth.graphql  test.graphql
src/: client.rs  env.rs  lib.rs  wasm.rs
src/api/: game.rs  mod.rs  universe.rs
src/crypto/: mod.rs
src/localization/: mod.rs
src/queries/: auth.rs
