[package]
name = "client"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
lazy_static = "1.3"
reqwest = "0.9"
serde_cbor = "0.9"

wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
