[package]
name = "client"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"
include = ["src/**/*", "queries/*", "build.rs", "Cargo.toml"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
graphql_client = "0.9"
reqwest = { version = "0.10", features = ["json"] }
shared = { path = "../shared" }
tokio = { version = "0.2", features = ["sync"] }
